# delivery-verification-ml

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/verification_ml/: __init__.py  __main__.py  auth.py  config.py  face_engine.py  main.py  ocr_engine.py  preprocess.py  schemas.py
